Name:                Ouch
Version:             0.0.1
License:             GPL
License-file:        COPYING
Author:              Orion Jankowski
Maintainer:          Orion Jankowski odj@me.com
Copyright:           Orion Jankowski 2010
Category:            Cheminformatics
Synopsis:            A cheminformatics library
Description:         A work in progress...
Homepage:            We don't have one
Stability:           Unstable
Tested-With:         GHC==6.10.4
Build-Type:          Simple
Build-Depends:       base >= 3 && < 5, containers, regex-tdfa
Data-Files:          README
Exposed-modules:     Ouch.Test.Methods
extensions:          CPP
ghc-options:         
