name: Ouch
version: 0.0.1
cabal-version: -any
build-type: Simple
license: GPL
license-file: COPYING
copyright: Orion Jankowski 2010
maintainer: Orion Jankowski odj@me.com
build-depends: base >=3 && <5, binary -any, bytestring -any,
               containers -any, parsec >=2.1.0.1, regex-tdfa -any, time -any
stability: Unstable
homepage: We don't have one
package-url:
bug-reports:
synopsis: A cheminformatics library
description: A work in progress...
category: Cheminformatics
author: Orion Jankowski
tested-with: GHC ==6.10.4
data-files: README
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Ouch.Data.Atom Ouch.Data.Bond
                 Ouch.Enumerate.Method Ouch.Input.Smiles Ouch.Output.Mol
                 Ouch.Output.SDF Ouch.Property.Builder Ouch.Property.Composition
                 Ouch.Property.Geometry Ouch.Property.Graph Ouch.Property.Ring
                 Ouch.Property.Extrinsic.Fingerprint Ouch.Structure.Atom
                 Ouch.Structure.Bond Ouch.Structure.Marker Ouch.Structure.Molecule
                 Ouch.Test.Methods Ouch.Text.String
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: CPP
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: